--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,10 @@ body {
   align-items: center;
   font-family: "Poppins", sans-serif;
 }
+footer {
+  align-self: flex-end;
+  margin-left: 100px;
+}
 .calculator {
   max-height: 100vh;
   display: grid;
@@ -34,6 +38,31 @@ body {
   color: white;
   font-weight: bold;
 }
+
+button {
+  border: none;
+  background-color: transparent;
+  font-size: large;
+  color: white;
+  font-weight: bolder;
+  cursor: pointer;
+  min-width: 83px;
+  height: 83px;
+  /* border-radius: 5px; */
+}
+#divide button,
+#multiply button,
+#subtract button,
+#add button {
+  color: black;
+}
+#divide button:hover,
+#multiply button:hover,
+#subtract button:hover,
+#add button:hover {
+  color: white;
+}
+
 .buttons:hover {
   transform: scale(1.02);
   transition: ease-in-out 0.35s;
@@ -60,6 +89,7 @@ output {
   align-items: center;
   font-weight: bold;
   font-size: larger;
+  letter-spacing: 3px;
 }
 input {
   min-width: 220px;
@@ -69,7 +99,17 @@ input {
   font-weight: bold;
   border: none;
   padding-left: 8px;
+  letter-spacing: 5px;
+  pointer-events: none;
 }
+
+#equals button {
+  /* border: solid black; */
+  min-width: 190px;
+  height: 83px;
+  border-radius: 5px;
+}
+
 #one,
 #two,
 #three {
@@ -101,8 +141,9 @@ input {
   grid-column: 4/5;
 }
 #clear {
-  background-color: red;
+  background-color: gray;
   color: whitesmoke;
+  pointer-events: none;
 }
 #divide,
 #multiply,
@@ -116,5 +157,9 @@ input {
 #subtract:hover,
 #add:hover {
   background-color: gray;
-  color: white;
+}
+#rightbracket,
+#leftbracket {
+  pointer-events: none;
+  background-color: grey;
 }
